--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -12,7 +12,7 @@
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./../img/logo.ico" >
-    <title>xdows安全-广告</title>
+    <title>xdows安全-更多下载</title>
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/download.css">
 </head>
@@ -53,12 +53,12 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">游戏交流群</div>
-                        <div class="d-item-desc">一个专业的游戏交流群，支持Android、Apple、WIndows端的游戏</div>
-                        <div class="d-item-desc">群号：812015311</div>
+                        <div class="d-item-title">备用链接</div>
+                        <div class="d-item-desc">如果第一个打开慢请点击此链接 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
-            </div>  
+            </div> 
             
             <div class="down-ietm windows">
                 <div class="down-ietm-inner">
