--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -64,10 +64,9 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">注意事项</div>
-                        <div class="d-item-desc">1.0-1.53都将停止支持 <span class="update-time"></span></div>
-                        <div class="d-item-desc">部分代码参考PYAS的代码 <span class="update-time"></span></div>
-                        <div class="down-btn"><a href="./Dev/support.html" onClick="tcssReport('tim.downloads.windows');">支持</a></div>
+                        <div class="d-item-title">更多下载</div>
+                        <div class="d-item-desc">获取更多xdows系列产品 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="./Dev/MDS.html" onClick="tcssReport('tim.downloads.windows');">查看</a></div>
                     </div>
                 </div>
             </div>  
