--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -66,18 +66,14 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">游戏交流群</div>
-                        <div class="d-item-desc">一个专业的游戏交流群，支持Android、Apple、WIndows端的游戏</div>
-                        <div class="d-item-desc">群号：812015311</div>
+                        <div class="d-item-title">文件中转站</div>
+                        <div class="d-item-desc">快速中转文件</div>
+                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-uNKY.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
             </div>  
             </div>
         </div>
-    </div>
-    <div class="footer d-page">
-        <p>反馈群：749412281</p>
-        <p class="copy-right">Copyright © 2020-<script>document.write(new Date().getFullYear())</script> XTY64XTY. All Rights Reserved.  版权所有</p>
     </div>
 
     <script src="./js/jquery.min.js"></script>
