--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -97,6 +97,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     <div class="footer d-page">
         <p>反馈群：749412281</p>
         <p class="copy-right">Copyright © 2020-<script>document.write(new Date().getFullYear())</script> XTY64XTY. All Rights Reserved.  版权所有</p>
