--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -54,7 +54,8 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">备用链接</div>
-                        <div class="d-item-desc">如果第一个打开慢请点击此链接 <span class="update-time"></span></div>
+                        <div class="d-item-desc">如果下载页面打开慢请点击此链接 <span class="update-time"></span></div>
+                        <div class="d-item-desc">可能不是最新版本 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
@@ -68,6 +69,7 @@
                     <div class="info-area">
                         <div class="d-item-title">文件中转站</div>
                         <div class="d-item-desc">快速中转文件</div>
+                        <div class="d-item-desc">让系统更好用</div>
                         <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-uNKY.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
