--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -74,6 +74,19 @@
                     </div>
                 </div>
             </div>  
+            <div class="down-ietm windows">
+                <div class="down-ietm-inner">
+                    <div class="logo-area">
+                        <div class="itemlogo"></div>
+                    </div>
+                    <div class="info-area">
+                        <div class="d-item-title">NTOS系统</div>
+                        <div class="d-item-desc">此系统删除了不需要的系统组件</div>
+                        <div class="d-item-desc">适合虚拟机使用,支持NTOS 10和7</div>
+                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-1U0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                    </div>
+                </div>
+            </div>  
             </div>
         </div>
     </div>
