--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -103,8 +103,7 @@
                 <div class="history-version-item-content">
                     <div class="newfunc">
                     <div class="newfunc-title">问：使用的的是什么语言</div>
-                    <div class="newfunc-list">答：目前使用的是易语言，不过已有 xdows security for Python计划​</div>
-                    <div class="newfunc-list">    和 xdows security 重置计划，敬请期待。。​</div>
+                    <div class="newfunc-list">答：目前使用的是易语言，不过已有 xdows security for Python计划和 xdows security 重置计划，敬请期待。</div>
                     </div>
                 </div>
             </div>
