--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -99,10 +99,10 @@
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">使用的的是什么语言 <span class="arrow"></span></div>
+                <div class="history-version-item-title">使用的的是什么语言写的 <span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
-                    <div class="newfunc-title">问：使用的的是什么语言</div>
+                    <div class="newfunc-title">问：使用的的是什么语言写的</div>
                     <div class="newfunc-list">答：目前使用的是易语言，不过已有 xdows security for Python计划和 xdows security 重置计划，敬请期待。</div>
                     </div>
                 </div>
