--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta itemprop="name" content="xdows安全，你的全新杀毒软件">
-    <meta name="keywords" content="xdows安全，你的全新杀毒软件" />
-    <meta name="description" content="xdows安全，你的全新杀毒软件" />
+    <meta itemprop="name" content="xdows security，你的全新杀毒软件">
+    <meta name="keywords" content="xdows security，你的全新杀毒软件" />
+    <meta name="description" content="xdows security，你的全新杀毒软件" />
     <!--分享卡标题预埋meta-->
-    <meta name="description" itemprop="description" content="xdows安全，你的全新杀毒软件" />
+    <meta name="description" itemprop="description" content="xdows security，你的全新杀毒软件" />
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./../img/logo.ico" >
-    <title>xdows安全-支持</title>
+    <title>xdows security-支持</title>
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/download.css">
     <link rel="stylesheet" href="./../css/support.css">
@@ -69,10 +69,10 @@
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">为什么xdows安全需要管理员权限<span class="arrow"></span></div>
+                <div class="history-version-item-title">为什么xdows security需要管理员权限<span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
-                    <div class="newfunc-title">问：为什么xdows安全需要管理员权限</div>
+                    <div class="newfunc-title">问：为什么xdows security需要管理员权限</div>
                     <div class="newfunc-list">答：对系统的防护需要比较高的权限来运行</div>
                     </div>
                 </div>
