--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta itemprop="name" content="xdows安全，你的全新杀毒软件">
-    <meta name="keywords" content="xdows安全，你的全新杀毒软件" />
-    <meta name="description" content="xdows安全，你的全新杀毒软件" />
+    <meta itemprop="name" content="xdows security，你的全新杀毒软件">
+    <meta name="keywords" content="xdows security，你的全新杀毒软件" />
+    <meta name="description" content="xdows security，你的全新杀毒软件" />
     <!--分享卡标题预埋meta-->
-    <meta name="description" itemprop="description" content="xdows安全，你的全新杀毒软件" />
+    <meta name="description" itemprop="description" content="xdows security，你的全新杀毒软件" />
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./../img/logo.ico" >
-    <title>xdows安全-更多下载</title>
+    <title>xdows security-更多下载</title>
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/download.css">
 </head>
