--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta itemprop="name" content="xdows安全，你的全新杀毒软件">
-    <meta name="keywords" content="xdows安全，你的全新杀毒软件" />
-    <meta name="description" content="xdows安全，你的全新杀毒软件" />
+    <meta itemprop="name" content="xdows security，你的全新杀毒软件">
+    <meta name="keywords" content="xdows security，你的全新杀毒软件" />
+    <meta name="description" content="xdows security，你的全新杀毒软件" />
     <!--分享卡标题预埋meta-->
     <meta name="description" itemprop="description" content="xdows安全，你的全新杀毒软件" />
     <!--分享卡描述预埋meta-->
@@ -24,7 +24,7 @@
         <img src="./img/index-bg1.png" alt="" class="bg-img">
         <div class="banner1-info new">
             <div class="wording">
-                <div class="move-title">xdows安全<br>你的全新杀毒软件
+                <div class="move-title">xdows security<br>你的全新杀毒软件
                 </div>
                 <div class="move-desc">支持清理加速、病毒查杀、工具箱等功能。</div>
                 <div class="move-down">
