--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>2.06</title>
+    <title>2.07</title>
     <link rel="shortcut icon" href="./../img/logo.ico" >
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/support.css">
@@ -13,8 +13,37 @@
         <div class="version-list">
 
             <div class="version-item newest">
-                <div class="newversion">最新版本 2.06</div>
+                <div class="newversion">最新版本 2.07</div>
                 <div class="newfunc">
+                    <div class="newfunc">
+                    <div class="newversion">2.07</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">优化本地库扫描速度</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">已知问题（已修复）</div>
+                </div>
+            </div>
+            <div class="history-version">
+                <div class="history-version-title">其它版本</div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">2.08版本[正在开发]<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">2.08</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">优化本地库扫描速度</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">已知问题（已修复）</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">2.05版本<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
                     <div class="newversion">2.06</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化及增强主动防御</div>
@@ -44,21 +73,6 @@
                     <div class="newfunc-title">注意事项：</div>
                     <div class="newfunc-list">由于语言包修改，请重新选择自己的语言</div>
                     <div class="newfunc-list">由于语言包修改，请替换配置文件</div>
-                </div>
-            </div>
-            <div class="history-version">
-                <div class="history-version-title">其它版本</div>
-            </div>
-            <div class="history-version-item">
-                <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">2.07版本[正在开发]<span class="arrow"></span></div>
-                <div class="history-version-item-content">
-                    <div class="newfunc">
-                    <div class="newversion">2.07</div>
-                    <div class="newfunc-title">新功能：</div>
-                    <div class="newfunc-list">优化</div>
-                    <div class="newfunc-title">Bugs：</div>
-                    <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
                 </div>
             </div>
