--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -19,6 +19,7 @@
                     <div class="newversion">2.07</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化本地库扫描速度</div>
+                    <div class="newfunc-list">全新工具页面（仅部分测试）</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                 </div>
