--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <title>XTY64XTY网站</title>
   <style>
     body {
-      background-color: lightblue;
+      background-color: grey;
       background-size: cover;
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: '华康方圆体W7',sans-serif;
     }
+
 
     h1 {
       color: white;
@@ -25,7 +26,7 @@
     }
 
     li {
-      width: 25%;
+      width: 18%;
       margin: 10px;
     }
 
@@ -35,7 +36,7 @@
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
-      border-radius: 10px;
+      border-radius: 5px;
       box-shadow: 2px 2px 4px black;
     }
 
@@ -43,19 +44,19 @@
       transform: scale(1.1);
     }
 
-    .github {
+    .button1 {
       background-color: #6e5494;
     }
 
-    .code40 {
+    .button2 {
       background-color: #ff9800;
     }
 
-    .bilibili {
+    .button3 {
       background-color: #00a1d6;
     }
 
-    .ccw {
+    .button4 {
       background-color: #4caf50;
     }
 
@@ -88,7 +89,7 @@
       }
 
       div {
-        width: 100%; /* Make the container fit the screen */
+        width: 10 0%; /* Make the container fit the screen */
         height: auto; /* Adjust the height according to the content */
         border-radius: 0; /* Remove the rounded corners */
       }
@@ -97,25 +98,25 @@
 </head>
 <h1>XTY64XTY的项目堆</h1>
 <body>
-  <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-    <div style="width: 1200px; height: 800px; border-radius: 20px; background-color: lightblue; box-shadow: inset 0 0 20px black;">
+
       
 <p style="color:white; font-size:30px; text-align:center;">XTY64XTY的项目</p>
+
 <ul>
-<li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="github">xdows4</a></li>
-<li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="code40">xdows3</a></li>
-<li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="bilibili">XTYAI</a></li>
-<li><a href="./xdows安全" class="ccw">xdows security</a></li>
+<li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="button1">xdows4</a></li>
+<li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="button2">xdows3</a></li>
+<li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="button3">XTYAI</a></li>
+<li><a href="./xdows安全" class="button4">xdows 系列</a></li>
 </ul>
+
 <p style="color:white; font-size:30px; text-align:center;">XTY64XTY的主页</p>
 <ul>
-<li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="github">GitHub</a></li>
-<li><a href="https://www.40code.com/#page=user&id=1603" class="code40">40code</a></li>
-<li><a href="https://space.bilibili.com/1208834427" class="bilibili">Bilibili</a></li>
-<li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="ccw">CCW</a></li>
+<li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="button1">GitHub</a></li>
+<li><a href="https://www.40code.com/#page=user&id=1603" class="button2">40code</a></li>
+<li><a href="https://space.bilibili.com/1208834427" class="button3">Bilibili</a></li>
+<li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="button4">CCW</a></li>
 </ul>
     </div>
   </div>
 </body>
 </html>
-
