--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -107,6 +107,71 @@
                     </div>
                 </div>
             </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">各个版本有什么区别 <span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newfunc-title">问：使用的的是什么语言写的</div>
+                    <div class="newfunc-list">答：
+                            <table border="1"  >
+                              <tr>
+                                <th>功能</th>
+                                <th>普通版</th>
+                                <th>专业版</th>
+                                <th>终极版</th>
+                              </tr>
+                              <tr>
+                                <td align="center">主页 模块</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                              </tr>
+                              <tr>
+                                <td align="center">杀毒 模块</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                              </tr>
+                              <tr>
+                                 <td align="center">个性化 模块</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                              </tr>
+                              <tr>
+                                <td align="center">进程防御 模块</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                              </tr>
+                              <tr>
+                                <td align="center">基础防御 模块</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                              </tr>
+                              <tr>
+                                <td align="center">注册表防御 模块</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                              </tr>
+                              <tr>
+                                <td align="center">xdows tools 模块</td>
+                                <td align="center">×</td>
+                                <td align="center">√</td>
+                                <td align="center">√</td>
+                              </tr>
+                              <tr>
+                                <td align="center">高级设置_Web模块</td>
+                                <td align="center">×</td>
+                                <td align="center">×</td>
+                                <td align="center">√</td>
+                              </tr></div>
+                    </div>
+                </div>
+            </div>
         </div>
     <div class="footer d-page">
         <p>反馈群：749412281</p>
