--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -114,7 +114,7 @@
                     <div class="newfunc">
                     <div class="newfunc-title">问：使用的的是什么语言写的</div>
                     <div class="newfunc-list">答：
-                            <table border="1"  >
+                            <table border="0" cellspacing="1">
                               <tr>
                                 <th>功能</th>
                                 <th>普通版</th>
