--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -17,7 +17,14 @@
     <link rel="stylesheet" href="./../css/download.css">
     <link rel="stylesheet" href="./../css/support.css">
 </head>
+td {
+  text-align:center;
+  background-color:white
+}
 
+table {
+  background-color:black
+}
 <body>
     <div class="header scrollTop">
         <div class="h-inner">
