--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -17,14 +17,7 @@
     <link rel="stylesheet" href="./../css/download.css">
     <link rel="stylesheet" href="./../css/support.css">
 </head>
-td {
-  text-align:center;
-  background-color:white
-}
 
-table {
-  background-color:black
-}
 <body>
     <div class="header scrollTop">
         <div class="h-inner">
@@ -175,7 +168,7 @@ table {
                                 <td align="center">×</td>
                                 <td align="center">×</td>
                                 <td align="center">√</td>
-                              </tr></div>
+                              </tr></table></div>
                     </div>
                 </div>
             </div>
