--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -112,7 +112,7 @@
                 <div class="history-version-item-title">各个版本有什么区别 <span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
-                    <div class="newfunc-title">问：使用的的是什么语言写的</div>
+                    <div class="newfunc-title">问：各个版本有什么区别</div>
                     <div class="newfunc-list">答：
                             <table border="0" cellspacing="1">
                               <tr>
