--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -36,6 +36,8 @@
                     <div class="newversion">2.08</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化本地库扫描速度</div>
+                    <div class="newfunc-list">增加 EXUI 组件</div>
+                    <div class="newfunc-list">删除窗口移动时半透明</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
