--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -74,6 +74,19 @@
                     </div>
                 </div>
             </div>  
+            <div class="down-ietm windows">
+                <div class="down-ietm-inner">
+                    <div class="logo-area">
+                        <div class="itemlogo"></div>
+                    </div>
+                    <div class="info-area">
+                        <div class="d-item-title">winget++</div>
+                        <div class="d-item-desc">winget工具</div>
+                        <div class="d-item-desc">更方便使用winget</div>
+                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-fRuY.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                    </div>
+                </div>
+            </div>  
             </div>
         </div>
     </div>
