--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -9,11 +9,11 @@
     <meta name="keywords" content="xdows security，你的全新杀毒软件" />
     <meta name="description" content="xdows security，你的全新杀毒软件" />
     <!--分享卡标题预埋meta-->
-    <meta name="description" itemprop="description" content="xdows安全，你的全新杀毒软件" />
+    <meta name="description" itemprop="description" content="xdows security，你的全新杀毒软件" />
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./img/logo.ico" >
-    <title>xdows安全</title>
+    <title>xdows security</title>
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/index.css">
   
