--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -42,6 +42,7 @@
                     <div class="info-area">
                         <div class="d-item-title">最新版本</div>
                         <div class="d-item-desc">支持 Windows 7 以上的设备</div>
+                        <div class="d-item-desc">使用下载器下载最新版</div>
                         <div class="down-btn"><a href="./Dev/xdows安全.zip" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>  
                  </div>
@@ -67,6 +68,7 @@
                     <div class="info-area">
                         <div class="d-item-title">更多下载</div>
                         <div class="d-item-desc">获取更多xdows系列产品 <span class="update-time"></span></div>
+                        <div class="d-item-desc">此软件的以及备用下载链接 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="./Dev/MDS.html" onClick="tcssReport('tim.downloads.windows');">查看</a></div>
                     </div>
                 </div>
