--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -109,6 +109,16 @@
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">使用需要遵循什么协议吗<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newfunc-title">问：使用需要遵循什么协议吗</div>
+                    <div class="newfunc-list">答：有的，在 https://XTY64XTY12345.github.io/xdows安全/Dev/agreement.txt。​</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
                 <div class="history-version-item-title">各个版本有什么区别 <span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
