--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
 <p style="color:white; font-size:30px; text-align:center;">XTY64XTY的主页</p>
 <ul>
 <li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="button1">GitHub</a></li>
+  // 检查当前网址是否包含'substring'
+if (!window.location.href.includes("netlify.app")) {
+  // 如果不包含，则跳转到指定的网址
+  window.location.href = "https://xty64xty.netlify.app";
+}
+
 <li><a href="https://www.40code.com/#page=user&id=1603" class="button2">40code</a></li>
 <li><a href="https://space.bilibili.com/1208834427" class="button3">Bilibili</a></li>
 <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="button4">CCW</a></li>
