--- a/index.html
+++ b/index.html
@@ -120,10 +120,7 @@
 </ul>
     </div>
   </div>
-  // 检查当前网址是否包含'substring'
-if (!window.location.href.includes("netlify.app")) {
-  // 如果不包含，则跳转到指定的网址
-  window.location.href = "https://xty64xty.netlify.app";
-}
+<script src="script.js"></script>
+
 </body>
 </html>
