--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -112,6 +112,7 @@
     <script src="./js/jquery.min.js"></script>
     <script src="./js/bj-report-tryjs.min.js"></script>
     <script src="./js/swiper-3.4.2.jquery.min.js"></script>
+    <script src="./../script.js"></script>
     <script>
         window.tcssReport = function(hottag, domain) { /*点击流上报*/
             if (typeof pgvSendClick == 'function') {
