--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -15,6 +15,7 @@
     <title>xdows security-下载</title>
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/download.css">
+    <script src="./../script.js"></script>
 </head>
 
 <body>
