--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -15,6 +15,7 @@
     <title>xdows security-更多下载</title>
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/download.css">
+    <script src="./../../script.js"></script>
 </head>
 
 <body>
