--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="./../img/logo.ico" >
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/support.css">
+    <script src="./../../script.js"></script>
 </head>
 
 <body>
