--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/download.css">
     <link rel="stylesheet" href="./../css/support.css">
+    <script src="./../../script.js"></script>
 </head>
 
 <body>
