--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -20,6 +20,7 @@
                     <div class="newversion">2.07</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化本地库扫描速度</div>
+                    <div class="newfunc-list">更新“更新日志”网址</div>
                     <div class="newfunc-list">全新反馈页面</div>
                     <div class="newfunc-list">可设置是否开机自启动</div>
                     <div class="newfunc-list">去除愚人节彩蛋</div>
