--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -114,7 +114,7 @@
                 <div class="history-version-item-content">
                     <div class="newfunc">
                     <div class="newfunc-title">问：使用需要遵循什么协议吗</div>
-                    <div class="newfunc-list">答：有的，在 https://XTY64XTY12345.github.io/xdows安全/Dev/agreement.txt。​</div>
+                    <div class="newfunc-list">答：有的，在 https://xty64xty.netlify.app/xdows安全/Dev/agreement.txt。​</div>
                     </div>
                 </div>
             </div>
