--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -401,7 +401,7 @@
                         <div class="newversion">1.10</div>
                         <div class="newfunc-title">新功能：</div>
                         <div class="newfunc-list">侧边栏从按钮改成图片</div>
-                        <div class="newfunc-list">支持使用360</div>
+                        <div class="newfunc-list">接入360云查杀</div>
                         <div class="newfunc-list">工具箱、设置界面修改</div>
                         <div class="newfunc-title">Bugs：</div>
                         <div class="newfunc-list">安全设置打不开（已修复）</div>
