--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -31,7 +31,7 @@
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">2.08版本[正在开发]<span class="arrow"></span></div>
+                <div class="history-version-item-title">2.08版本[因误操作文件被删除]<span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
                     <div class="newversion">2.08</div>
