--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -31,6 +31,19 @@
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">3.00版本[项目重置]<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">3.00</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">无</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">已知问题（已修复）</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
                 <div class="history-version-item-title">2.08版本[因误操作文件被删除]<span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
