--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -39,12 +39,16 @@
             <div class="version-item newest">
                 <div class="newversion">支持版本</div>
                 <div class="newfunc">
-                    <div class="newfunc-title">2.00-2.99</div>
-                    <div class="newfunc-list">终止日期2024年7月14日</div>
-                    <div class="newfunc-list">还未停止支持</div>
+                    <div class="newfunc-title">3.00-3.99</div>
+                    <div class="newfunc-list">终止日期:20??年?月??日</div>
+                    <div class="newfunc-list">是否停止支持：否</div>
                     <div class="newfunc-title">1.0-1.53</div>
-                    <div class="newfunc-list">终止日期2023年7月28日</div>
-                    <div class="newfunc-list">已经停止支持</div>
+                    <div class="newfunc-title">2.00-2.99</div>
+                    <div class="newfunc-list">终止日期:2024年7月14日</div>
+                    <div class="newfunc-list">是否停止支持：否</div>
+                    <div class="newfunc-title">1.0-1.53</div>
+                    <div class="newfunc-list">终止日期:2023年7月28日</div>
+                    <div class="newfunc-list">是否停止支持：是</div>
                 </div>
             </div>
             <div class="history-version">
