--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -187,6 +187,17 @@
                     </div>
                 </div>
             </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">人工客服入口<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newfunc-title">问：人工客服入口</div>
+                    <div class="newfunc-list">答：请加QQ，解决问题后立即删除好友。以下是链接：​</div>
+                        <a href="tencent://message/?uin=974260693&Site=&Menu=yes">点我和好友聊天</a> 
+                    </div>
+                </div>
+            </div>
         </div>
     <div class="footer d-page">
         <p>反馈群：749412281</p>
