--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -193,8 +193,17 @@
                 <div class="history-version-item-content">
                     <div class="newfunc">
                     <div class="newfunc-title">问：人工客服入口</div>
-                    <div class="newfunc-list">答：请加QQ，解决问题后立即删除好友。以下是链接：​</div>
-                        <a href="tencent://message/?uin=974260693&Site=&Menu=yes">点我和好友聊天</a> 
+                    <div class="newfunc-list">答：请加QQ，解决问题后立即删除好友。QQ号为2966643247</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">进入交流群反馈<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newfunc-title">问：进入交流群反馈</div>
+                    <div class="newfunc-list">答：请加QQ群：<a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=ef2zGg6WAE3pMMHD85JjhJyxvJoMiW-x&jump_from=webapi&authKey=sJZYr8297z8LmFGVb2uJ9eGkW4BSr3U58nG8//tZatuzeOazyWaKG2vDHP6bHRhU"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="XTY交流群" title="XTY交流群"></a></div>
                     </div>
                 </div>
             </div>
