--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -203,7 +203,8 @@
                 <div class="history-version-item-content">
                     <div class="newfunc">
                     <div class="newfunc-title">问：进入交流群反馈</div>
-                    <div class="newfunc-list">答：请加QQ群：<a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=ef2zGg6WAE3pMMHD85JjhJyxvJoMiW-x&jump_from=webapi&authKey=sJZYr8297z8LmFGVb2uJ9eGkW4BSr3U58nG8//tZatuzeOazyWaKG2vDHP6bHRhU"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="XTY交流群" title="XTY交流群"></a></div>
+                    <div class="newfunc-list">答：请加QQ群：</div>
+                    <div class="down-btn"><a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=ef2zGg6WAE3pMMHD85JjhJyxvJoMiW-x&jump_from=webapi&authKey=sJZYr8297z8LmFGVb2uJ9eGkW4BSr3U58nG8//tZatuzeOazyWaKG2vDHP6bHRhU" onClick="tcssReport('tim.downloads.windows');">加入QQ群</a></div>
                     </div>
                 </div>
             </div>
