--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -203,8 +203,8 @@
                 <div class="history-version-item-content">
                     <div class="newfunc">
                     <div class="newfunc-title">问：进入交流群反馈</div>
-                    <div class="newfunc-list">答：请加QQ群：</div>
-                    <div class="down-btn"><a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=ef2zGg6WAE3pMMHD85JjhJyxvJoMiW-x&jump_from=webapi&authKey=sJZYr8297z8LmFGVb2uJ9eGkW4BSr3U58nG8//tZatuzeOazyWaKG2vDHP6bHRhU" onClick="tcssReport('tim.downloads.windows');">加入QQ群</a></div>
+                    <div class="newfunc-list">答：请加QQ群：                    <a href="https://qm.qq.com/cgi-bin/qm/qr?k=ef2zGg6WAE3pMMHD85JjhJyxvJoMiW-x&jump_from=webapi&authKey=sJZYr8297z8LmFGVb2uJ9eGkW4BSr3U58nG8//tZatuzeOazyWaKG2vDHP6bHRhU" target="_blank" rel="noopener noreferrer"> <div class="newfunc-list">单击加入QQ群<span class="update-time"></span></div></a></div>
+
                     </div>
                 </div>
             </div>
