--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -52,6 +52,12 @@
         </div>
     </div>
     <div class="function">
+            <div class="func-title">什么是恶意软件</div>
+            <div class="func-desc">
+恶意软件是指损坏或破坏 终结点设备的正常使用的恶意应用程序或代码。当设备被恶意软件感染时，你可能会经历未经授权的访问、数据泄露或设备被锁定，直至你支付赎金为止。散布恶意软件的人（称为网络罪犯）受金钱驱使，会使用受感染的设备发动攻击，例如获取银行凭据、收集可出售的个人信息、出售对计算资源的访问权限或向受害者勒索支付信息。（取自 Microsoft 官网）
+</div>
+        </div>
+    <div class="function">
         <div class="func-inner clear">
             <div class="func-item">
                 <div class="func-logo1"></div>
