--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -75,7 +75,7 @@
             <div class="func-item">
                 <div class="func-logo3"></div>
                 <div class="func-title">丰富工具</div>
-                <div class="func-desc">工具箱带有进程管理等工具，更加规范的管理你的电脑。</div>
+                <div class="func-desc">Xdows Tools 带有很多工具，更加规范的管理你的电脑。</div>
             </div>
         </div>
     </div>
