--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -1,2 +1,9 @@
 <script src="script.js"></script>
+  <style>
+    body {
+      background-color: grey;
+      background-size: cover;
+      font-family: '华康方圆体W7',sans-serif;
+    }
+  </style>
 <h1>hello，world！</h1>
