--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -1,8 +1,12 @@
+<html>
+<head>
 <style>
     body {
       font-family: '华康方圆体W7',sans-serif;
     }
   </style>
+</head>
 <title>Xdows Service</title>
 <h1>hello，world！</h1>
 <script src="script.js"></script>
+</html>
