--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -6,7 +6,9 @@
     }
   </style>
 </head>
-<title>Xdows Service</title>
-<h1>hello，world！</h1>
-<script src="script.js"></script>
+<body>
+    <title>Xdows Service</title>
+    <h1>hello，world！</h1>
+    <script src="script.js"></script>
+</body>
 </html>
