--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -1,14 +1,29 @@
 <html>
 <head>
 <style>
-    body {
-      font-family: '华康方圆体W7',sans-serif;
-    }
+body {
+    font-family: '华康方圆体W7',sans-serif;
+}
+.styled {
+  border: 0;
+  line-height: 2.5;
+  padding: 0 100px;
+  font-size: 1rem;
+  color: #fff;
+  border-radius: 10px;
+  background-color: #DCDCDC;
+
+}
+
+.styled:hover {
+  background-color: #C0C0C0;
+}
   </style>
+    <script src="script.js"></script>
 </head>
 <body>
     <title>Xdows Service</title>
     <h1>设置</h1>
-    <script src="script.js"></script>
+    <input class="styled" type="button" value="Add to favorites" />
 </body>
 </html>
