--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -9,7 +9,7 @@ body {
   line-height: 2.5;
   padding: 0 100px;
   font-size: 1rem;
-  color: #fff;
+  color: #000;
   border-radius: 10px;
   background-color: #DCDCDC;
 
