--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -24,6 +24,6 @@ body {
 <body>
     <title>Xdows Service</title>
     <h1>设置</h1>
-    <input class="styled" type="button" value="Add to favorites" />
+    <input class="styled" type="button" value="关于" />
 </body>
 </html>
