--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -23,7 +23,6 @@ body {
 </head>
 <body>
     <title>Xdows Service</title>
-    <h1>设置</h1>
-    <input class="styled" type="button" value="关于" />
+    <input class="styled" type="button" value="关于" onclick="window.open('filename.html')"  />
 </body>
 </html>
