--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -23,6 +23,6 @@ body {
 </head>
 <body>
     <title>Xdows Service</title>
-    <input class="styled" type="button" value="关于" onclick="window.open('filename.html')"  />
+    <input class="styled" type="button" value="关于" onclick="window.open('about.html')"  />
 </body>
 </html>
