--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -23,6 +23,7 @@
 </head>
 <body>
     <title>Xdows Service</title>
+    <input class="styled" type="button" value="暴力破解" onclick="window.open('about.html')"  />
     <input class="styled" type="button" value="关于" onclick="window.open('about.html')"  />
 </body>
 </html>
