--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -24,6 +24,6 @@
 <body>
     <title>Xdows Service</title>
     <input class="styled" type="button" value="暴力破解" onclick="window.open('about.html')"  />
-    <input class="styled" type="button" value="关于" onclick="window.open('about.html')"  />
+    <input class="styled" type="button" value="关于软件" onclick="window.open('about.html')"  />
 </body>
 </html>
