--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -19,7 +19,13 @@
   background-color: #C0C0C0;
 }
   </style>
-    <script src="script.js"></script>
+    <script>
+    @import"Button.css";
+    function OK(){
+	alert("你好，我是一个警告框！");
+}
+    </script>
+    
 </head>
 <body>
     <title>Xdows Service</title>
