--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -19,12 +19,7 @@
   background-color: #C0C0C0;
 }
   </style>
-    <script>
-    @import"Button.css";
-    function OK(){
-	alert("你好，我是一个警告框！");
-}
-    </script>
+    <script src=“script.js”></script>
     
 </head>
 <body>
