--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <title>Xdows Service</title>
-    <input class="styled" type="button" value="暴力破解" onclick="OK()"  />
+    <input class="styled" type="button" value="暴力破解" onclick="window.open('OK.html')"  />
     <input class="styled" type="button" value="关于软件" onclick="window.open('about.html')"  />
 </body>
 </html>
