--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -14,14 +14,24 @@
         <div class="version-list">
 
             <div class="version-item newest">
-                <div class="newversion">最新版本 2.07</div>
+                <div class="newversion">最新版本 3.00[项目重置]</div>
                 <div class="newfunc">
                     <div class="newfunc">
-                    <div class="newversion">2.07</div>
+                    <div class="newversion">3.00</div>
                     <div class="newfunc-title">新功能：</div>
-                    <div class="newfunc-list">优化本地库扫描速度</div>
-                    <div class="newfunc-list">增加 EXUI 组件</div>
-                    <div class="newfunc-list">删除窗口移动时半透明</div>
+                    <div class="newfunc-list">UI大改</div>
+                    <div class="newfunc-list">注册表防御模块独立</div>
+                    <div class="newfunc-list">MBR 防御模块独立</div>
+                    <div class="newfunc-title">“模块删除计划”更新：</div>
+                    <div class="newfunc-list">删除垃圾清理模块</div>
+                    <div class="newfunc-list">删除文件粉碎模块</div>
+                    <div class="newfunc-list">删除自定义主题色模块</div>
+                    <div class="newfunc-list">删除反馈模块（后面会加）</div>
+                    <div class="newfunc-list">删除CPU占用检测模块</div>
+                    <div class="newfunc-list">删除深色主题</div>
+                    <div class="newfunc-list">删除更新模块</div>
+                    <div class="newfunc-list">删除多语言模块</div>
+                    <div class="newfunc-list">删除开机自启动模块</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                 </div>
@@ -31,7 +41,7 @@
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">3.00版本[项目重置]<span class="arrow"></span></div>
+                <div class="history-version-item-title">3.01版本<span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
                     <div class="newversion">3.00</div>
@@ -58,6 +68,21 @@
                     <div class="newfunc-list">更新部分UI界面</div>
                     <div class="newfunc-list">全新工具页面（仅部分测试）</div>
                     <div class="newfunc-list">全新打开配置页面（仅部分测试）</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">已知问题（已修复）</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">2.07版本<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">2.07</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">优化本地库扫描速度</div>
+                    <div class="newfunc-list">增加 EXUI 组件</div>
+                    <div class="newfunc-list">删除窗口移动时半透明</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
