--- a/index.html
+++ b/index.html
@@ -111,12 +111,11 @@
 
 <p style="color:white; font-size:30px; text-align:center;">XTY64XTY的主页</p>
 <ul>
-<li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="button1">GitHub</a></li>
-
-
+<li><a href="https://github.com/XTY64XTY12345" class="button1">GitHub</a></li>
 <li><a href="https://www.40code.com/#page=user&id=1603" class="button2">40code</a></li>
 <li><a href="https://space.bilibili.com/1208834427" class="button3">Bilibili</a></li>
 <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="button4">CCW</a></li>
+<li><a href="https://www.acfun.cn/u/74879115" class="button1">AcFun</a></li>
 </ul>
     </div>
   </div>
