--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -46,7 +46,7 @@
                     <div class="newfunc">
                     <div class="newversion">3.00</div>
                     <div class="newfunc-title">新功能：</div>
-                    <div class="newfunc-list">无</div>
+                    <div class="newfunc-list">关于菜单使用列表框</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
