--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -33,7 +33,9 @@
                     <div class="newfunc-list">删除多语言模块</div>
                     <div class="newfunc-list">删除开机自启动模块</div>
                     <div class="newfunc-title">Bugs：</div>
-                    <div class="newfunc-list">已知问题（已修复）</div>
+                    <div class="newfunc-list">未安装易语言用户主程序会发出弹窗提示关键库损坏（未修复）</div>
+                    <div class="newfunc-list">部分用户主程序无法运行（未修复）</div>
+                    <div class="newfunc-list">其他问题（已修复）</div>
                 </div>
             </div>
             <div class="history-version">
