--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -49,6 +49,7 @@
                     <div class="newversion">3.00</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">关于菜单使用列表框</div>
+                    <div class="newfunc-list">关于菜单增加反馈链接</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
