--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -46,10 +46,12 @@
                 <div class="history-version-item-title">3.01版本<span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
-                    <div class="newversion">3.00</div>
+                    <div class="newversion">3.01</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">关于菜单使用列表框</div>
                     <div class="newfunc-list">关于菜单增加反馈链接</div>
+                    <div class="newfunc-list">功能菜单增加建议链接</div>
+                    <div class="newfunc-list">修改Home.html</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
