--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -51,7 +51,8 @@
                     <div class="newfunc-list">关于菜单使用列表框</div>
                     <div class="newfunc-list">关于菜单增加反馈链接</div>
                     <div class="newfunc-list">功能菜单增加建议链接</div>
-                    <div class="newfunc-list">修改Home.html</div>
+                    <div class="newfunc-list">修改UI</div>
+                    <div class="newfunc-list">增加深色模式</div>
                     <div class="newfunc-list">窗口内容区增加圆角</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
